_content/automation/bai/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bai-prod-release-ibm-dba-ek-elasticsearch
    chart: ibm-dba-ek
    component: bai-prod-release-ibm-dba-ek-kibana
    heritage: Tiller
    release: bai-prod-release
  name: bai-prod-release-ibm-dba-ek-kibana
  namespace: baiproject
spec:
  port:
    targetPort: kibana-ui-https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: bai-prod-release-ibm-dba-ek-kibana
  wildcardPolicy: None
